# FastRegrid

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  example.cpp
include/fastregrid/: CMakeLists.txt  config.h  filesystem.h  interpolation.h  io.h  logger.h  regridder.h  spatial_index.h  types.h  utils.h
